# ai-evaluation-testing-framework

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  mkdocs.yml  pyproject.toml  verify_key.py
.github/workflows/: publish_docs.yml
data/: knowledge_base.txt
docs/: architecture.md  dashboard.md  docker.md  evaluators.md  index.md  playwright.md  rag_evaluation.md  red_teaming.md  target_app.md  usage.md
src/: dashboard.py  main.py  target_app.py  verify_openai.py
src/framework/: runner.py
src/framework/chatbot/: openai_client.py  playwright_client.py
src/framework/core/: interfaces.py
src/framework/evaluators/: content_safety.py  llm_evaluator.py  rag_evaluator.py
src/framework/models/: data_models.py
src/framework/recommendations/: engine.py
src/framework/red_teaming/: attacker.py  strategies.py
src/framework/storage/: mongo_client.py
tests/: llm_eval_suite.yaml  rag_test_suite.yaml  simple_suite.yaml  test_placeholder.py
